# groqqy

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Containerfile  DEVELOPMENT.md  LICENSE  Makefile  README.md  RELEASE.md  container_interactive.sh  container_test.sh  demo_reveal_learning.sh  pyproject.toml  requirements.txt  run_demo_test.sh  run_groqqy.py  run_unit_tests.py  setup.py  test_standalone.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  publish.yml
docs/: REVEAL_SEED_PROMPT_MVP.md  SELF_DISCOVERY_BOOT_SNIPPET.md  SELF_DISCOVERY_SEED_PROMPT.md  TEACHING_GUIDE.md
docs/archive/: AGENTIC_ARCHITECTURE_PROPOSAL.md  GROQQY_V0.2.0_CHANGES.md  GROQQY_V0.3.0_ARCHITECTURE_REFACTOR.md  OPTION_A_IMPLEMENTATION_COMPLETE.md  VALIDATION_REPORT.md
docs/guides/: CONTAINER_TESTING.md  QUICK_START_NEW_FEATURES.md  REVEAL_LEARNING_DEMO.md
examples/: README.md  basic_chat.py  custom_tools.py  example_web_search.py  export_conversation.py  reveal_mvp_demo.py  self_discovery_demo.py  tool_usage.py
groqqy/: __init__.py  agent.py  bot.py  cli.py  config.py  log.py  provider.py  strategy.py  tool.py  tools.py  utils.py
groqqy/components/: __init__.py  conversation.py  executor.py  exporter.py  tracker.py
groqqy/providers/: __init__.py  groq.py
tests/examples/: test_reveal_discovery.py  test_reveal_simple.py
tests/integration/: test_architecture.py  test_container.py  test_export.py
tests/unit/: test_config.py  test_no_tools.py  test_tools.py  test_utils.py
